# anki-smart-deck

./: .env.example  .gitignore  CONVENTIONS.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
docs/: NoteType.md  NoteType.org  useful_anki_actions.org
examples/: ai_service.py  ai_word_service.py  anki_connect.py  anki_models.py  anki_notes.py  card_generator.py  image_search_service.py  tts_service.py  word.pkl
src/anki_smart_deck/: __init__.py  _ankiconnect.py  _card_gen.py  _words.py  cli.py  config.py  models.py
src/anki_smart_deck/services/: __init__.py  ai.py  anki_connect.py  image_search.py  tts.py
src/ankinote/: __init__.py  _card_gen.py  main.py
src/ankinote/services/: ai.py  anki_connect.py  image_search.py  tts.py
src/ankinote/utils/: __init__.py  httpcli.py
tests/utils/: test_httpcli.py
