[project]
name = "anki-smart-deck"
version = "0.1.0"
description = "AI-powered Anki vocabulary card generator using Google's suite of APIs"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Chris Chen", email = "chrischen@ignity.xyz" }
]
keywords = ["anki", "flashcards", "vocabulary", "ai", "google-ai", "language-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "aiohttp>=3.13.2",
    "click>=8.2.0",
    "google-cloud-texttospeech>=2.31.0",
    "google-genai[aiohttp]>=1.40.0",
    "google-images-search>=1.4.7",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "shortuuid>=1.0.13",
]

[project.scripts]
anki-deck = "anki_smart_deck.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_smart_deck"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "basedpyright>=1.29",
    "ruff>=0.12.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.1.1",
    "ipython>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pyright]
include = ["src/anki_smart_deck"]
exclude = [
    ".ruff_cache",
    "**/__pycache__",
]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
minversion = "8.4.1"
testpaths = ["tests"]
asyncio_mode = "auto"
